fix: scrollbar color

--- a/src/renderer/css/mixins.less
+++ b/src/renderer/css/mixins.less
@@ -24,7 +24,7 @@
 
   &::-webkit-scrollbar-thumb {
     border-radius: 50px;
-    background-color: red;
+    background-color: #787D8C;
   }
 
   &::-webkit-scrollbar-track {
